--- a/html/main.html
+++ b/html/main.html
@@ -48,7 +48,7 @@
         var frameHeight = api.frameHeight || '';
 
         var str = '<ul>';
-        str += '<li>引擎版本信息: ' + ver + '</li>';
+        str += '<li>引擎版本信息6666: ' + ver + '</li>';
         str += '<li>系统类型: ' + sType + '</li>';
         str += '<li>系统版本: ' + sVer + '</li>';
         str += '<li>设备标识: ' + id + '</li>';
